--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,5 @@
 body {
+  background: rgb(79, 79, 79);;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
