--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,5 @@
 body {
-  background: rgb(79, 79, 79);;
+  background: rgb(79, 79, 79) !important;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -7,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow:hidden;
 }
 
 code {
