--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,7 +9,13 @@ body {
   overflow: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+
+
+@media screen and (max-width: 640px) {
+
+  body{
+    overflow: hidden !important;
+  }
+  
+  
 }
